<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<!-- Copyright (c) 2014-2015 K Team. All Rights Reserved. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.kframework.k</groupId>
  <artifactId>parent</artifactId>
  <packaging>pom</packaging>
  <version>3.6-SNAPSHOT</version>
  <name>K Framework Tool Parent</name>

  <modules>
    <module>kore</module>
    <module>kernel</module>
    <module>k-distribution</module>
    <module>java-backend</module>
    <module>coq-backend</module>
    <module>func-backend</module>
    <module>sdf-parser</module>
    <module>tiny</module>
  </modules>

  <scm>
    <connection>scm:git:https://github.com/kframework/k.git</connection>
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <repository>
      <id>runtime-verification</id>
      <name>Runtime Verification Repository</name>
      <url>http://office.runtimeverification.com:8888/repository/internal</url>
      <snapshots><enabled>false</enabled></snapshots>
      <releases><enabled>true</enabled></releases>
    </repository>
    <repository>
      <id>runtime-verification.snapshots</id>
      <name>Runtime Verification Snapshot Repository</name>
      <url>http://office.runtimeverification.com:8888/repository/snapshots</url>
      <snapshots><enabled>true</enabled></snapshots>
      <releases><enabled>false</enabled></releases>
    </repository>
  </repositories>
  <distributionManagement>
    <repository>
      <id>runtime-verification</id>
      <name>Runtime Verification Repository</name>
      <url>http://office.runtimeverification.com:8888/repository/internal</url>
    </repository>
    <snapshotRepository>
      <id>runtime-verification.snapshots</id>
      <name>Runtime Verification Snapshot Repository</name>
      <url>http://office.runtimeverification.com:8888/repository/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <base>master</base>
    <skipCheckstyleOnWindows>true</skipCheckstyleOnWindows>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <scala.version>2.11.6</scala.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>
    <dependency>
      <groupId>org.scala-lang.modules</groupId>
      <artifactId>scala-java8-compat_2.11</artifactId>
      <version>0.3.0</version>
    </dependency>
    <dependency>
        <groupId>org.scala-lang</groupId>
        <artifactId>scala-reflect</artifactId>
        <version>${scala.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.9.5</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <includeFilterFile>src/main/config/findbugs-include.xml</includeFilterFile>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>src/javasources</directory>
            </fileset>
            <fileset>
              <directory>lib</directory>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <!-- The following execution is used to get the list of changed files to
               run the copyright check on. -->
          <execution>
            <id>init-changed-files</id>
            <phase>pre-integration-test</phase>
            <configuration>
              <target>
                <exec executable="git" outputproperty="git.diff.out" failifexecutionfails="false">
                  <arg value="diff" />
                  <arg value="${base}" />
                  <arg value="--name-only" />
                </exec>
                <condition property="git.diff.out" value="">
                  <isset property="git.diff.out" />
                </condition>
                <filelist id="git.diff.filelist" dir="." files="${git.diff.out}" />
                <pathconvert property="git.modified.files" pathsep="," refid="git.diff.filelist" dirsep="/">
                  <map from="${basedir}/" to="" />
                </pathconvert>
              </target>
              <exportAntProperties>true</exportAntProperties>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.13</version>
        <!-- TODO(dwightguth): remove the following dependency override with Maven Checkstyle Plugin 2.14 -->
        <dependencies>
            <dependency>
                <groupId>com.puppycrawl.tools</groupId>
                <artifactId>checkstyle</artifactId>
                <version>5.9</version>
            </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>checkstyle-copyright</id>
            <goals>
              <goal>check</goal>
            </goals>
            <inherited>false</inherited>
            <configuration>
              <sourceDirectory>${project.basedir}</sourceDirectory>
              <includes>${git.modified.files}</includes>
              <configLocation>src/main/config/checkstyle-copyright.xml</configLocation>
              <failsOnError>true</failsOnError>
              <consoleOutput>true</consoleOutput>
              <excludes>.idea/**,**/com/davekoelle/**,**/src/main/sdf/syntax/Integration.sdf</excludes>
            </configuration>
          </execution>
          <execution>
            <id>checkstyle-k</id>
            <goals>
              <goal>check</goal>
            </goals>
            <inherited>false</inherited>
            <configuration>
              <sourceDirectory>${project.basedir}</sourceDirectory>
              <includes>**/*.k</includes>
              <configLocation>src/main/config/checkstyle-k.xml</configLocation>
              <failsOnError>true</failsOnError>
              <consoleOutput>true</consoleOutput>
            </configuration>
          </execution>
          <execution>
            <id>checkstyle-java</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <sourceDirectory>src</sourceDirectory>
              <includes>**/*.java</includes>
              <configLocation>src/main/config/checkstyle-java.xml</configLocation>
              <suppressionsLocation>src/main/config/checkstyle-suppress.xml</suppressionsLocation>
              <failsOnError>true</failsOnError>
              <consoleOutput>true</consoleOutput>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <tagNameFormat>v@{project.version}</tagNameFormat>
          <pushChanges>false</pushChanges>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>linux64</id>
      <activation>
        <os>
          <family>Unix</family>
          <name>!mac os x</name>
          <arch>amd64</arch>
        </os>
      </activation>
      <properties>
        <native.arch.classifier>64</native.arch.classifier>
        <native.classifier>linux64</native.classifier>
        <native.os.classifier>linux</native.os.classifier>
        <native.exe.type>uexe</native.exe.type>
        <native.exe.extension />
        <native.script.extension />
      </properties>
    </profile>
    <profile>
      <id>linux32</id>
      <activation>
        <os>
          <family>Unix</family>
          <name>!mac os x</name>
          <arch>i386</arch>
        </os>
      </activation>
      <properties>
        <native.arch.classifier>32</native.arch.classifier>
        <native.classifier>linux32</native.classifier>
        <native.os.classifier>linux</native.os.classifier>
        <native.exe.type>uexe</native.exe.type>
        <native.exe.extension />
        <native.script.extension />
      </properties>
    </profile>
    <profile>
      <id>osx</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <properties>
        <native.arch.classifier>64</native.arch.classifier>
        <native.classifier>osx</native.classifier>
        <native.os.classifier>osx</native.os.classifier>
        <native.exe.type>uexe</native.exe.type>
        <native.exe.extension />
        <native.script.extension />
      </properties>
    </profile>
    <profile>
      <id>windows64</id>
      <activation>
        <os>
          <family>windows</family>
          <arch>amd64</arch>
        </os>
      </activation>
      <properties>
        <native.arch.classifier>64</native.arch.classifier>
        <native.classifier>windows64</native.classifier>
        <native.os.classifier>windows</native.os.classifier>
        <native.exe.type>exe</native.exe.type>
        <native.exe.extension>.exe</native.exe.extension>
        <native.script.extension>.bat</native.script.extension>
        <checkstyle.skip>${skipCheckstyleOnWindows}</checkstyle.skip>
      </properties>
    </profile>
    <profile>
      <id>windows32</id>
      <activation>
        <os>
          <family>windows</family>
          <arch>x86</arch>
        </os>
      </activation>
      <properties>
        <native.arch.classifier>32</native.arch.classifier>
        <native.classifier>windows32</native.classifier>
        <native.os.classifier>windows</native.os.classifier>
        <native.exe.type>exe</native.exe.type>
        <native.exe.extension>.exe</native.exe.extension>
        <native.script.extension>.bat</native.script.extension>
        <checkstyle.skip>${skipCheckstyleOnWindows}</checkstyle.skip>
      </properties>
    </profile>
  </profiles>
</project>
